gateway/1.0/modules/ROOT/pages/flex-conn-manage.adoc
= Managing Flex Gateway in Connected Mode
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

Connected Mode enables you to manage all of your non-Mule APIs from a single unified
control plane, and grants you all the other benefits of Anypoint Platform, such as
monitoring through API Analytics and reusability through Exchange.

Get started using Flex Gateway in Connected Mode with the following tasks:

* xref:flex-gateway-replicas.adoc[Manage Flex Replicas] - A Flex Replica is an instance of the Flex Gateway. By default, Flex Gateway runs a
single replica. Running multiple replicas enables scaling, load balancing,
and high availability.
* xref:flex-conn-tls-config.adoc[Configure TLS Context] - 
include::gateway::partial$task-tls-config.adoc[tags=intro1]
* xref:api-manager::create-instance-task.adoc[Add an API Instance in API Manager] - An API Instance is an instantiation of an API that describes the configuration of the deployed API. The API can be deployed on one of the following three runtime options: Flex Gateway, Mule Gateway, or Service Mesh. 
* xref:api-manager::configure-api-task.adoc[Configure an API Instance Endpoint in API Manager] - Depending on the runtime and API type, you can
use several optional configurations to customize your API Instance to fit your specific situation.
* xref:policies::policies-included-apply.adoc[Apply a Policy in API Manager] - A policy extends the functionality of an API and enforces certain capabilities such as security. A policy can control access and traffic. For example, a policy can generally control authentication, access,
allotted consumption, and service level access (SLA).
* xref:flex-use-api-alerts.adoc[Use API Alerts] - Using API alerts for Flex Gateway in Connected Mode, you can add and configure email
notifications that flag unusual API behavior.
* xref:flex-view-api-metrics.adoc[View Key Metrics for Flex Gateway APIs] - API Manager and Anypoint Monitoring collect metrics on active Flex Gateway APIs. You can view charts related to these metrics and filter the data by date.